<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<parent>
		<artifactId>evosuite</artifactId>
		<groupId>org.evosuite</groupId>
		<version>1.0.7-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>evosuite-shell</artifactId>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<resources>
			<resource>
				<directory>src</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<excludes>
									<!-- the eclipse plugin needs this -->
									<exclude>*:xml-apis</exclude>
								</excludes>
							</artifactSet>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<evosuite.version>1.0.7-SNAPSHOT</evosuite.version>
		<poi.version>3.11</poi.version>
	</properties>

	<repositories>
		<repository>
			<id>jgit-repository</id>
			<url>http://download.eclipse.org/jgit/maven</url>
		</repository>

	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.github.tsantalis</groupId>
			<artifactId>refactoring-miner</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>5.13.0.202109080827-r</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.core</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.java.core</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.java.sourcecode</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.java.bytecode</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.jimple.parser</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.callgraph</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.soot-oss</groupId>
			<artifactId>sootup.analysis</artifactId>
			<version>1.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.evosuite</groupId>
			<artifactId>evosuite-client</artifactId>
			<version>${evosuite.version}</version>
		</dependency>
		<dependency>
			<groupId>org.evosuite</groupId>
			<artifactId>evosuite-runtime</artifactId>
			<version>${evosuite.version}</version>
		</dependency>
		<dependency>
			<groupId>org.evosuite</groupId>
			<artifactId>evosuite-master</artifactId>
			<version>${evosuite.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.0</version>
		</dependency>
		
		<!-- <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <optional>true</optional>
        </dependency> -->
        
        <dependency>
    		<groupId>com.alibaba</groupId>
   			<artifactId>fastjson</artifactId>
    		<version>1.2.28</version>
		</dependency>
		
		
		<!-- https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core -->
		<dependency>
		    <groupId>org.eclipse.jdt</groupId>
		    <artifactId>org.eclipse.jdt.core</artifactId>
		    <version>3.7.1</version>
		</dependency>

		
	</dependencies>

	<profiles>
		<profile>
			<id>package-jars</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<inherited>true</inherited>
						<configuration>
							<outputDirectory>${jars-destination}</outputDirectory>
							<archive>
								<manifest>
									<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
									<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								</manifest>
								<manifestEntries>
									<Main-Class>evosuite.shell.EvosuiteForMethod</Main-Class>
									<Premain-Class>org.evosuite.runtime.agent.InstrumentingAgent</Premain-Class>
									<Agent-Class>org.evosuite.runtime.agent.InstrumentingAgent</Agent-Class>
									<Can-Redefine-Classes>true</Can-Redefine-Classes>
									<Can-Retransform-Classes>true</Can-Retransform-Classes>
								</manifestEntries>
							</archive>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>